generator client {
  provider = "prisma-client"
  output   = "./generated/client"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  USER
  ADMIN
}

enum SyncStatus {
  PROCESSING
  READY
  ERROR
}

enum WatchStatus {
  PLAN_TO_WATCH
  WATCHING
  COMPLETED
  ON_HOLD
  DROPPED
}

model User {
  id              String        @id @default(uuid()) @db.Uuid
  username        String        @unique
  email           String        @unique
  passwordHash    String
  avatarUrl       String?
  role            Role          @default(USER)
  privacySettings Json?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  userMedias      UserMedia[]
  userEpisodes    UserEpisode[]
  customLists     CustomList[]
  comments        Comment[]
  watchLogs       WatchLog[]
}

model Media {
  id            Int        @id @default(autoincrement())
  tvdbId        String     @unique
  title         String
  originalTitle String?
  synopsis      String?    @db.Text
  posterPath    String?
  backdropPath  String?
  releaseDate   DateTime?
  status        String?
  syncStatus    SyncStatus @default(PROCESSING)
  genres        String[]
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt

  // Inheritance simulation (Discriminator or optional fields)
  type         MediaType
  duration     Int? // For Movie
  budget       BigInt? // For Movie
  totalSeasons Int? // For Series
  network      String? // For Series

  seasons     Season[]
  userMedias  UserMedia[]
  customLists CustomList[] @relation("MediaInLists")
  comments    Comment[]
  watchLogs   WatchLog[]
}

enum MediaType {
  MOVIE
  SERIES
}

model Season {
  id           Int       @id @default(autoincrement())
  number       Int
  episodeCount Int
  posterPath   String?
  airDate      DateTime?
  seriesId     Int
  series       Media     @relation(fields: [seriesId], references: [id])
  episodes     Episode[]
}

model Episode {
  id             Int           @id @default(autoincrement())
  tvdbId         String        @unique
  number         Int
  absoluteNumber Int?
  title          String
  overview       String?       @db.Text
  runtime        Int?
  airDate        DateTime?
  imagePath      String?
  seasonId       Int
  season         Season        @relation(fields: [seasonId], references: [id])
  userEpisodes   UserEpisode[]
  comments       Comment[]
  watchLogs      WatchLog[]
}

model UserMedia {
  id           Int         @id @default(autoincrement())
  rating       Int? // 0-5
  status       WatchStatus @default(PLAN_TO_WATCH)
  isFavorite   Boolean     @default(false)
  rewatchCount Int         @default(0)
  addedAt      DateTime    @default(now())
  userId       String      @db.Uuid
  user         User        @relation(fields: [userId], references: [id])
  mediaId      Int
  media        Media       @relation(fields: [mediaId], references: [id])

  @@unique([userId, mediaId])
}

model UserEpisode {
  id         Int      @id @default(autoincrement())
  userRating Int? // 0-5
  watchedAt  DateTime @default(now())
  userId     String   @db.Uuid
  user       User     @relation(fields: [userId], references: [id])
  episodeId  Int
  episode    Episode  @relation(fields: [episodeId], references: [id])

  @@unique([userId, episodeId])
}

model CustomList {
  id          Int      @id @default(autoincrement())
  name        String
  description String?  @db.Text
  isPublic    Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  userId      String   @db.Uuid
  user        User     @relation(fields: [userId], references: [id])
  medias      Media[]  @relation("MediaInLists")
}

model Comment {
  id              Int      @id @default(autoincrement())
  content         String   @db.Text
  containsSpoiler Boolean  @default(false)
  postedAt        DateTime @default(now())
  reportCount     Int      @default(0)
  userId          String   @db.Uuid
  user            User     @relation(fields: [userId], references: [id])
  mediaId         Int?
  media           Media?   @relation(fields: [mediaId], references: [id])
  episodeId       Int?
  episode         Episode? @relation(fields: [episodeId], references: [id])
}

model WatchLog {
  id          Int      @id @default(autoincrement())
  watchedDate DateTime @default(now())
  platform    String?
  userId      String   @db.Uuid
  user        User     @relation(fields: [userId], references: [id])
  mediaId     Int?
  media       Media?   @relation(fields: [mediaId], references: [id])
  episodeId   Int?
  episode     Episode? @relation(fields: [episodeId], references: [id])
}
